src/App.css
html {
  box-sizing: border-box;
}

.App {
  display: flex;
  flex-direction: column;
  align-items: center;
  max-width: 1000px;
  margin: auto;
}

a.nav-link {
  color: white;
}

a.nav-link:hover  {
   color: #FD5A1E;
}

.profileDiv {
  color: black;
  width: 600px;
}

.card {
  display: flex;
  flex-direction: column;
  align-items: center;
  background-color: #636667;
}

.card img {
  width: 40%;
  border: 1px solid #27251F;
  border-radius: 5px;
  margin-top: 5%;
}

.card-body {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin: 2%;
}

.linksDiv {
  display: flex;
  flex-direction: row;
}

div .modal-content {
  background: #636667;
  border: none;
  border-radius: 15px;
}

.norway {
  position: absolute;
  bottom: 585px;
  left: 895px;
  border: 3px solid gray;
  border-radius: 3px;
}

i {
  color: black;
  font-size: 1.5em;
}

i:hover {
  color: rgba(253, 90, 30, 0.95);
  cursor: pointer;
}

 .ddt {
  color: rgba(253, 90, 30, 0.95);
}

.ddt:hover {
  color: #EFD19F;
}

.mapboxgl-ctrl-logo {
  display: none !important;
}

.mapboxgl-ctrl-attrib {
  display: none !important;
}

#some-element {
  display: none;
  font-size: 18px;
  margin-top: 10px;
  padding: 5px;
  height:170px;
  width:100%;
  text-align: center;
  color: #EFD19F;
}

.trolley:hover #some-element {
  display: block;
}

.trolley:hover .border2 {
  display:none;
}

#some-element2 {
  display: none;
  font-size: 18px;
  margin-top: 10px;
  margin-right: 0;
  margin-left: 150px;
  height:230px;
  width:100%;
  text-align: center;
  color: #EFD19F;
}

.city:hover #some-element2 {
  display: block;
}

.city:hover .border2 {
  display:none
}

